--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+ProjectSettings/InputManager.asset
+Assets/Plugins/*
+*.dll
